[tool.poetry]
name = "get_ip_bot"
version = "0.1.0"
description = ""
authors = ["Sergey Fomin <sfomin@37bytes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.7.0"
aiohttp = "^3.8.3"
pytest = "^7.1.3"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
